<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mynotifications.EditActivity">

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:hint="@string/name" />

    <Spinner
        android:id="@+id/spinner_repeat_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_name"/>

    <Switch
        android:id="@+id/switch_enabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_name"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/text_every"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_repeat_choice"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/every"/>

    <EditText
        android:id="@+id/edit_repeat_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/text_every"
        android:layout_toRightOf="@id/text_every"
        android:gravity="center_horizontal"
        android:maxLength="2"
        android:inputType="number"
        android:ems="2" />

    <TextView
        android:id="@+id/text_repeat_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/text_every"
        android:layout_toRightOf="@id/edit_repeat_count"/>

    <TextView
        android:id="@+id/text_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/text_repeat_unit"
        android:layout_toRightOf="@id/text_repeat_unit"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/at"/>

    <TextView
        android:id="@+id/text_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/text_at"
        android:layout_toRightOf="@id/text_at"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:clickable="true"
        android:onClick="otherClick"/>

    <GridLayout
        android:id="@+id/layout_weekly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_below="@id/edit_repeat_count">

        <Switch
            android:id="@+id/switch_monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monday"
            android:onClick="daySwitch"
            android:layout_marginRight="10dp"/>

        <Switch
            android:id="@+id/switch_tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuesday"
            android:onClick="daySwitch"
            android:layout_marginRight="10dp"/>

        <Switch
            android:id="@+id/switch_wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wednesday"
            android:onClick="daySwitch"
            android:layout_marginRight="10dp"/>

        <Switch
            android:id="@+id/switch_thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thursday"
            android:onClick="daySwitch"
            android:layout_marginRight="10dp"/>

        <Switch
            android:id="@+id/switch_friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/friday"
            android:onClick="daySwitch"
            android:layout_marginRight="10dp"/>

        <Switch
            android:id="@+id/switch_saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saturday"
            android:onClick="daySwitch"
            android:layout_marginRight="10dp"/>

        <Switch
            android:id="@+id/switch_sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunday"
            android:onClick="daySwitch"
            android:layout_marginRight="10dp"/>

    </GridLayout>

    <Spinner
        android:id="@+id/spinner_repeat_until"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_weekly"/>

    <TextView
        android:id="@+id/text_until"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_alignTop="@id/spinner_repeat_until"
        android:layout_toRightOf="@id/spinner_repeat_until"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:clickable="true"
        android:onClick="otherClick"/>

    <LinearLayout
        android:id="@+id/layout_for"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_alignTop="@id/spinner_repeat_until"
        android:layout_toRightOf="@id/spinner_repeat_until"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_for_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:maxLength="3"
            android:inputType="number"
            android:ems="3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/events"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/save"
        android:onClick="doSave"/>

</RelativeLayout>
